// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

// Congregations
Table congregations {
  congregation_id uuid [primary key]
  name varchar(255)
  created_at date
}

// Users
Table users {
  user_id uuid [primary key]
  congregation_id uuid [ref: - congregations.congregation_id, not null]

  user_name varchar(255)
  email_address varchar(255)
  password_hash varchar(255)
  created_at date
}

// Members
Table members {
  member_id uuid [primary key]
  congregation_id uuid [ref: - congregations.congregation_id, not null]

  first_name varchar(255)
  last_name varchar(255)
  other_names varchar(255)
  email varchar(255) [unique]
  phone_number varchar(16)
  date_of_birth date
  joined_date date
  gender enum
  residential_address varchar(255)
  city varchar(255)
  hometown varchar(255)
  region enum
  gps_address varchar(255)
  marital_status enum
  next_of_kin_name varchar(128)
  emergency_contact_name varchar(128)
  emergency_contact_phone varchar(16)
  member_activity_status enum
}


// Organizations
Table organizations {
  organization_id uuid [primary key]
  congregation_id uuid [ref : - congregations.congregation_id, not null]

  name varchar(255)
  description varchar(255)
  created_at date
}

// Organization Members
Table organization_members {
  organization_members_id uuid [unique]
  congregation_id uuid [ref: - congregations.congregation_id, not null]

  member_id uuid [ref: - members.member_id, not null]
  organization_id uuid [ref: - organizations.organization_id, not null]
  role enum
  joined_date date

  indexes {
    (member_id, organization_id) [pk]
  }
}


// Attendance
Table attendance_records {
  attendance_id uuid [primary key]
  congregation_id uuid [ref: - congregations.congregation_id, not null]

  member_id uuid [ref: - members.member_id, null]
  for_date date
  church_service_type enum [not null]
  attendance_type enum
  check_in_time time
  description varchar(255) [null]
}


// Events
Table events {
  event_id uuid [primary key]
  congregation_id uuid [ref: - congregations.congregation_id, not null]

  organization_id uuid [ref: - organizations.organization_id, null]
  organizer_id uuid [ref: - members.member_id, null]
  title varchar(255) [not null]
  start_date date
  end_date date
  start_time timestamp [null]
  end_time timestamp [null]
  location varchar(255) [null]
  capacity integer [null]
  description varchar(255) [null]
}

Table event_attendance {
  event_attendance_id uuid [unique]
  congregation_id uuid [ref: - congregations.congregation_id, not null]

  member_id uuid [ref: - members.member_id, not null]
  event_id uuid [ref: - events.event_id, not null]
  check_in_time timestamp

  indexes {
    (member_id, event_id) [pk]
  }
}

Table event_registrations {
  event_registration_id uuid [unique]
  congregation_id uuid [ref: - congregations.congregation_id, not null]

  member_id uuid [ref: - members.member_id, not null]
  event_id uuid [ref: - events.event_id, not null]
  registration_date date

  indexes {
  (member_id, event_id) [pk]
  }
}


// Finances
Table financial_transactions {
  transaction_id uuid [primary key]
  congregation_id uuid [ref: - congregations.congregation_id, not null]

  category_id uuid [ref: - transaction_categories.category_id]
  transaction_type enum [not null]
  transaction_date date
  amount decimal
  description varchar(255)
}

Table transaction_categories {
  category_id uuid [primary key]
  congregation_id uuid [ref: - congregations.congregation_id, not null]

  name varchar(255)
  category_type enum
}


// Tithe
Table tithe {
  tithe_id uuid [primary key]
  congregation_id uuid [ref: - congregations.congregation_id, not null]

  member_id uuid [ref: - members.member_id, not null]
  amount decimal [not null]
  payment_method enum
  collection_date date [not null]
  forMonth enum [not null]
  forYear integer [not null]
  description varchar(255)
}


// Projects
Table projects {
  project_id uuid [primary key]
  congregation_id uuid [ref: - congregations.congregation_id, not null]

  category_id uuid [ref: - project_categories.category_id, null]
  project_manager_id uuid [ref: - members.member_id, not null]
  project_title varchar(255) [not null]
  target_amount decimal [not null]
  status enum [not null]
  start_date date [null]
  end_date date [null]
  description varchar(255)
}

Table project_categories {
  category_id uuid [primary key]
  congregation_id uuid [ref: - congregations.congregation_id, not null]

  name varchar(255) [not null]
}

Table project_contributions {
  contribution_id uuid [primary key]
  congregation_id uuid [ref: - congregations.congregation_id, not null]

  project_id uuid [ref: - projects.project_id, not null]
  amount decimal [not null]
  date_contributed date
  payment_method enum
  description varchar(255)
}


Table assets {
  asset_id uuid [primary key]
  congregation_id uuid [ref: - congregations.congregation_id, not null]

  name varchar(255)
  serial_number varchar(255) [null]
  category_id uuid [ref: - asset_categories.category_id, null]
  purchase_date date
  purchase_cost decimal
  current_value decimal
  status enum
  description varchar(255)

  // status can be: in_use, in_storage, under_maintenance, liquidated
  // when an asset is liquidated, we can set the current_value to 0 and status to liquidated
  // we then add a new income to the Assets Sold category in the transactions table with the amount equal
  // to the current_value of the asset
}

Table asset_categories{
  category_id uuid [primary key]
  congregation_id uuid [ref: - congregations.congregation_id, not null]

  category_name varchar(255) [not null]
}


/*
  REPORTING
  This table is still a work in progress, it's here because I don't want to forget it and do it again later
*/
Table report_snapshots {
  report_id uuid [primary key]
  unique_id uuid [unique]
  report_type enum [not null]
  generated_date datetime
  status enum
  frequency enum [not null]
  period_key varchar (255)
  data_json jsonb

}
